[project]
name = "riichimahjong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mahjong>=1.2.1",
    "numpy>=2.2.5",
    "pyarrow>=17.0.0",
    "pygame>=2.6.1",
    "pygame-ce>=2.5.3",
    "requests>=2.32.3",
    "ray[default,data,train]"
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
]
cu128 = [
  "torch>=2.7.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
